fix(StickyHeader): 🐛 font size of .firstHeading on mobile devices

--- a/resources/skins.citizen.styles/components/StickyHeader.less
+++ b/resources/skins.citizen.styles/components/StickyHeader.less
@@ -105,10 +105,5 @@ html {
 			padding-top: var( --space-sm );
 			padding-bottom: var( --space-sm );
 		}
-
-		.firstHeading,
-		.mw-page-title-parenthesis {
-			font-size: var( --font-size-medium );
-		}
 	}
 }
